@@ -1,0 +1,8 @@
+[DEFAULT]
+toolchain-prefix: %(gnu-type)s-
+toolchain-prefix-uclibc: %(gnu-cpu)s-uclibc-%(gnu-system)s-
+extension-libcs: uclibc
+
+[i386-linux]
+use-libc-uclibc: static
+
