@@ -1,8 +1,9 @@
 di-packages-build (0.6) UNRELEASED; urgency=low
 
-  * Fix parsing of XC-Package-Type
+  * Fix parsing of XC-Package-Type.
+  * Add make rules.
 
- -- Bastian Blank <waldi@debian.org>  Sat, 17 Jan 2004 16:08:40 +0100
+ -- Bastian Blank <waldi@debian.org>  Sun, 18 Jan 2004 13:59:32 +0100
 
 di-packages-build (0.5) unstable; urgency=low
 
